namespace cpp example
include "banji.thrift" 
include "student.thrift" 
include "school.thrift" 

service SchoolService{

    school.school GetAllBanji()
}